disallow-host-path-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallow-host-path-volumes-deployment
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
      volumes:
        - hostPath: "some-path"
