disallow-host-path-volumes/policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "disallow-host-path-volumes-binding"
spec:
  policyName: "disallow-host-path-volumes-policy"
  validationActions: [Warn]
